[package]
name = "huff-rs"
version = "0.1.0"
authors = ["Zachary Jackson <zacharyjackson@ufl.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"